Dockerfile is updated